--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <!-- HOME PAGE  -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div id="banner">
+        <img src="assets/images/banner.png" alt="banner"> 
+    </div>
+    
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
