--- a/index.html
+++ b/index.html
@@ -20,10 +20,26 @@
     <div id="banner">
         <img src="assets/images/banner.png" alt="banner"> 
     </div>
-    
+
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <h2>The Best Thai In Town</h2>
+
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+        
+        <div id="table">
+            <img src="assets/images/table-in-restaurant.jpg" alt="table"> 
+        </div>
     </main>
 </body>
 </html>
